tests/paczka1/small_fuzzy/62232566.err
Error in line 3: oLDp A761 51,8
Error in line 5: Gr3cA A342 46,8
Error in line 13: Gr3cA A761 61,4
